[tool.poetry]
name = "cognite-endpoint"
version = "0.1.0"
description = ""
authors = ["Pedro Lindeza"]

[tool.poetry.dependencies]
python = "^3.8"
cognite-sdk-core = "^2.31.0"
pandas = "^1.3.3"
azure-functions = "^1.7.2"
azure-identity = "^1.6.1"
azure-keyvault-secrets = "^4.3.0"
cognite-extractor-utils = "^2.2.0"
cognite-sdk-experimental = "^0.82.0"
pre-commit = "^2.19.0"
types-PyYAML = "^6.0.8"
PyYAML = "^6.0"
coverage = "^6.4.2"
cognite = "^0.0.4"
cognite-sdk = "3.*"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = {version = "^21.9b0", allow-prereleases = true}
pytest = "^6.2.5"
rope = "^0.19.0"
ipykernel = "^6.4.1"
azure-mgmt-resource = "^20.0.0"
openpyxl = "^3.0.9"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
